# a20_sdk_builder

./: .gitignore  Makefile.am  NEWS  NOTES  README.md  TODO  a20_sdk_builder.desktop  bootstrap.sh  clean_emacs_and_whitespaces.sh  configure.ac  do_all_in_one_step.sh  po_tmp.tgz  sdk_builder.desktop
Documentation/: Makefile.am  gui.txt
desktop/: Makefile.am  a20_sdk_builder.desktop
etc/: Makefile.am  a20_sdk_builder.conf  arm926_sdk_builder.conf
lib/: Makefile.am  checksum.c  config.c  download.c  error.c  extract.c  git.c  global.h  helper.c  libservice.h  network.c  version.c
pixmaps/: Makefile  Makefile.am
po/: POTFILES.in  a20-sdk-builder.pot  de.gmo  de.po  sdk-builder.pot
src/: Makefile.am  a20_sdk_builder.c  a20_sdk_builder.h  checksum.c  clone.c  common.h  common_git.c  config.c  download.c  error.c  extract.c  global.h  gui.c  help.c  init.c  main.c  sdk_builder  test.c  update.c
src/conf_d/: Makefile.am  common.h  main.c  threads.c
src/gui/: Makefile.am  checks.c  clone.c  common.h  common_git.c  gui.c  init.c  main.c  message_handler.c  test.c  threads.c
